Add TypeScript configuration and Docker setup for backend service

--- a/apps/backend/.oxlintrc.json
+++ b/apps/backend/.oxlintrc.json
@@ -1,5 +1,14 @@
 {
   "rules": {
     "no-unused-vars": "warn"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.{ts}"],
+      "plugins": ["typescript"],
+      "rules": {
+        "typescript/no-explicit-any": "error"
+      }
+    }
+  ]
 }
