feat: - Added docker-compose.yaml for integration testing - Updated turbo.json - Added dotenvx for managing .env files - Added zod, cookie-parser and other libraries... - Added a testing template - Added mongoose orm and db schemas - Added domain for news

--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,28 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalDependencies": [
+    "**/.env.*local"
+  ],
   "tasks": {
     "dev": {
       "cache": false,
       "persistent": true,
-      "dependsOn": ["^dev"]
+      "dependsOn": [
+        "^dev"
+      ],
+      "env": [
+        "MONGODB_USER",
+        "MONGODB_PASSWORD"
+      ]
     },
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
     }
   }
 }
