--- a/apps/backend/docker-compose.yaml
+++ b/apps/backend/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   int-db:
     image: mongo:latest
-    container_name: int-db
+    container_name: int-db-news
     environment:
       - MONGODB_INITDB_ROOT_USERNAME=admin
       - MONGODB_INITDB_ROOT_PASSWORD=admin
     ports:
-      - "27017:27017"
+      - "27018:27017"
     volumes:
       - int-db-data:/data/db
     networks:
