--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,18 +4,24 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "tsx --watch ./src/index.ts",
+    "dev": "dotenvx run -f .env.local -- tsx --watch ./src/index.ts",
     "prettier": "prettier ./src --write"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.47.6",
     "@repo/ts-config": "workspace:*",
+    "@types/cookie-parser": "^1.4.9",
     "@types/node": "22.14.0",
     "oxlint": "^1.6.0",
     "typescript": "5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4"
   },
   "config": {
