feat: almost done the frontend

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -5,10 +5,11 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
+    "allowImportingTsExtensions": true,
     "baseUrl": "./",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     }
   }
