--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,19 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/vite": "4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "4.1.11",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@dotenvx/dotenvx": "^1.47.6",
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "globals": "^16.3.0",
     "oxlint": "^1.6.0",
     "standard": "^17.1.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vite-plugin-oxlint": "^1.4.0"
