--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@repo/typescript-config/vite.json",
   "include": [
-    "src"
+    "src",
+    "types.d.ts"
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
