fix: some fixes

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
         "MONGODB_PASSWORD"
       ]
     },
-    "build": {
+    "frontend#build": {
       "dependsOn": [
         "^build"
       ],
