--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -19,7 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "4.1.11",
-    "@tanstack/react-query": "^5.83.0",
+    "@testing-library/react": "^16.3.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.1.11",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest-mock-extended": "^3.1.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
