--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "serve": "turbo run serve",
     "prettier": "prettier --write \"**/*.{ts,tsx,json}\""
   },
   "packageManager": "pnpm@10.13.1"
