--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,7 +20,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "4.1.11",
-    "@testing-library/react": "^16.3.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,16 +40,22 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.6",
     "@repo/typescript-config": "workspace:*",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "globals": "^16.3.0",
+    "jsdom": "^26.1.0",
     "oxlint": "^1.6.0",
     "standard": "^17.1.2",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
-    "vite-plugin-oxlint": "^1.4.0"
+    "vite-plugin-oxlint": "^1.4.0",
+    "vitest": "3.2.4"
   }
 }
