--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,15 +2,18 @@
   "name": "backend",
   "version": "0.0.1",
   "type": "module",
-  "main": "./src/index.ts",
+  "private": "true",
   "scripts": {
-    "dev": "dotenvx run -f .env.local -- tsx --watch ./src/index.ts",
-    "serve": "tsx ./src/index.ts",
-    "prettier": "prettier ./src --write"
+    "start": "node dist/index.js",
+    "build": "tsup",
+    "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
+    "lint": "oxlint --fix",
+    "check-types": "tsc --noEmit",
+    "test:unit": "vitest --project unit",
+    "test:int": "vitest --project int"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
@@ -23,11 +26,9 @@
     "@types/cors": "^2.8.19",
     "@types/node": "22.14.0",
     "oxlint": "^1.6.0",
+    "tsup": "^8.5.0",
     "typescript": "5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4"
-  },
-  "config": {
-    "tsconfig": "./tsconfig.json"
   }
 }
