--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
-    "test:int": "vitest --project int"
+    "test:int": "vitest --project int",
+    "vercel-build": "tsc ./src/lib/db/seed.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
