--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,13 +5,12 @@
   "private": "true",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsup",
+    "build": "tsc ./src/lib/db/seed.ts && tsup",
     "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
-    "test:int": "vitest --project int",
-    "vercel-build": "tsc ./src/lib/db/seed.ts"
+    "test:int": "vitest --project int"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
