--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,18 +5,20 @@
   "private": "true",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc ./src/lib/db/seed.ts && tsup",
+    "build": "tsx ./src/lib/db/seed.ts && tsup",
     "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
-    "test:int": "vitest --project int"
+    "test:int": "vitest --project int",
+    "seed": "tsx ./src/lib/db/seed.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
+    "tsx": "^4.20.3",
     "zod": "^4.0.5"
   },
   "devDependencies": {
