fix: test 10, @vercel/react-router doesn't work, I try to use vercel config

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,4 +1,10 @@
 {
     "buildCommand": "turbo run build --filter=frontend",
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ],
 }
