refactor: update vercel.json for API rewrites and remove obsolete configuration

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,4 +1,1 @@
-{
-    "buildCommand": "turbo run build --filter=backend",
-    "outputDirectory": "dist"
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src" }] }
