--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "main": "./src/index.ts",
+  "main": "index.ts",
   "version": "0.0.1",
   "type": "module",
   "private": "true",
