--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/apps/api"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/apps/frontend"
+            "destination": "/api"
         }
     ]
 }
