feat: add initial vercel.json configuration with API rewrites

--- a/turbo.json
+++ b/turbo.json
@@ -53,7 +53,10 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": [
+        "^build"
+      ]
     }
   }
 }
