feat: add functions configuration and related projects to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+    "relatedProjects": [
+        "apps/api",
+        "apps/frontend"
+    ],
+    "functions": {
+        "api/*": {
+            "maxDuration": 10,
+            "memory": 1024,
+            "runtime": "nodejs22.x"
+        }
+    },
     "version": 2,
     "rewrites": [
         {
