fix: ensure outputDirectory is correctly set in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
         "apps/api",
         "apps/frontend"
     ],
+    "outputDirectory": "dist",
     "functions": {
         "api/*": {
             "maxDuration": 10,
