--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "private": "true",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsx ./src/lib/db/seed.ts && tsup",
+    "build": "tsx ./src/lib/db/seed.ts && tsup --outDir public",
     "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
