fix: add missing output directories in turbo.json for api and frontend

--- a/apps/api/turbo.json
+++ b/apps/api/turbo.json
@@ -8,6 +8,8 @@
                 "PORT"
             ],
             "outputs": [
+                "public/**",
+                "build/**",
                 "dist/**"
             ]
         }
