--- a/apps/frontend/turbo.json
+++ b/apps/frontend/turbo.json
@@ -5,6 +5,8 @@
     "tasks": {
         "build": {
             "outputs": [
+                "public/**",
+                "build/**",
                 "dist/**"
             ]
         }
