--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,14 +6,14 @@
   "private": "true",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsx ./src/lib/db/seed.ts && tsup",
+    "build": "tsx ./api/lib/db/seed.ts && tsup",
     "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
     "test:int": "vitest --project int",
-    "seed": "tsx ./src/lib/db/seed.ts",
-    "reset-db": "tsx ./src/lib/db/reset-db.ts"
+    "seed": "tsx ./api/lib/db/seed.ts",
+    "reset-db": "tsx ./api/lib/db/reset-db.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
