--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,1 +1,16 @@
-{"version": 2, "rewrites": [{"source": "/api(.*)", "destination": "/api/index.ts"}]}
+{
+    "version": 2,
+    "rewrites": [
+        {
+            "source": "/api(.*)",
+            "destination": "/api/index.ts"
+        }
+    ],
+    "functions": {
+        "api/index.ts": {
+            "runtime": "nodejs22.x",
+            "maxDuration": 10,
+            "memory": 512
+        }
+    }
+}
