feat: implement serverless handler and add serverless-http dependency

--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -3,11 +3,11 @@
     "rewrites": [
         {
             "source": "/api(.*)",
-            "destination": "/api/index.ts"
+            "destination": "/api/serverless.ts"
         }
     ],
     "functions": {
-        "api/index.ts": {
+        "api/serverless.ts": {
             "maxDuration": 10,
             "memory": 512
         }
