refactor: remove serverless handler and update vercel.json for new routing

--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,17 +1,15 @@
 {
-    "functions": {
-        "api/serverless.ts": {
-            "memory": 1024,
-            "maxDuration": 10,
-            "includeFiles": "{{src,public}/**,{src,public}/**/**,package.json,node_modules/{ajv,apicache,axios,compression,cors,dotenv,express,express-jwt}/**,node_modules/{ajv,apicache,axios,compression,cors,dotenv,express,express-jwt}/**/**,}",
-            "excludeFiles": "{src/**/*.test.ts,src/**/**/.test.ts}"
-        }
-    },
-    "trailingSlash": true,
+    "version": 2,
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "api/serverless.ts"
+            "source": "/api(.*)",
+            "destination": "/api/dist/index.js"
         }
-    ]
+    ],
+    "functions": {
+        "api/dist/index.cjs": {
+            "maxDuration": 10,
+            "memory": 512
+        }
+    }
 }
