--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,8 @@
     "test:unit": "vitest --project unit",
     "test:int": "vitest --project int",
     "seed": "dotenvx run -- tsx ./api/lib/db/seed.ts",
-    "reset-db": "tsx ./api/lib/db/reset-db.ts"
+    "reset-db": "tsx ./api/lib/db/reset-db.ts",
+    "vercel-build": "pnpm build"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
