--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "api",
-  "main": "index.ts",
+  "name": "backend",
+  "main": "api/index.ts",
   "version": "0.0.1",
   "type": "module",
   "private": "true",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsx ./api/lib/db/seed.ts && tsup",
+    "build": "tsx ./src/lib/db/seed.ts && tsup",
     "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
     "test:int": "vitest --project int",
-    "seed": "dotenvx run -- tsx ./api/lib/db/seed.ts",
-    "reset-db": "tsx ./api/lib/db/reset-db.ts"
+    "seed": "dotenvx run -- tsx ./src/lib/db/seed.ts",
+    "reset-db": "tsx ./src/lib/db/reset-db.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
