--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "backend",
-  "main": "api/index.ts",
+  "main": "./api/index.ts",
   "version": "0.0.1",
-  "type": "module",
+  "type": "commonjs",
   "private": "true",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/api/index.js",
     "build": "tsx ./src/lib/db/seed.ts && tsup",
-    "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess \"node dist/index.cjs\"",
+    "dev": "dotenvx run -f .env.local -- tsup --watch --onSuccess 'node dist/index.js'",
     "lint": "oxlint --fix",
     "check-types": "tsc --noEmit",
     "test:unit": "vitest --project unit",
@@ -25,13 +25,10 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.6",
-    "@repo/typescript-config": "workspace:*",
-    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/node": "22.14.0",
+    "@types/node": "^24.0.15",
     "oxlint": "^1.6.0",
     "tsup": "^8.5.0",
-    "typescript": "5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4"
   }
