--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api(.*)",
-            "destination": "/api/dist/index.js"
+            "source": "/(.*)",
+            "destination": "/api"
         }
     ]
 }
