--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "prettier": "^3.6.2",
     "turbo": "latest",
-    "typescript": "^5.8.3"
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "turbo run build",
@@ -14,7 +14,7 @@
     "lint": "turbo run lint",
     "prettier": "prettier --write \"**/*.{ts,tsx,json}\""
   },
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=18"
   }
