feat: add news API tests and integrate supertest for backend testing
- Implemented comprehensive tests for the News API, covering all CRUD operations.
- Utilized supertest for HTTP assertions and integrated database reset and seeding functions.
- Configured Vitest for backend testing with environment variable support.
- Added hooks for fetching news data in the frontend using React Query.
- Introduced a new JSON fixture for testing news data.
- Updated vitest configuration to include aliasing for queries.
- Added supertest and its types to the project dependencies.

--- a/apps/backend/docker-compose.yaml
+++ b/apps/backend/docker-compose.yaml
@@ -1,18 +1,30 @@
 services:
+  dev-db:
+    image: mongo:latest
+    container_name: dev-db-news
+    ports:
+      - "27018:27017"
+    volumes:
+      - dev-db-data:/data/db
+    networks:
+      - testing-network
+    restart: always
+
   int-db:
     image: mongo:latest
     container_name: int-db-news
     ports:
-      - "27018:27017"
+      - "27019:27017"
     volumes:
       - int-db-data:/data/db
     networks:
-      - int-network
+      - testing-network
     restart: always
 
 volumes:
   int-db-data:
+  dev-db-data:
 
 networks:
-  int-network:
+  testing-network:
     driver: bridge
