--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
+    "supertest": "^7.1.3",
     "tsx": "^4.20.3",
     "zod": "^4.0.5"
   },
@@ -27,9 +28,9 @@
     "@dotenvx/dotenvx": "^1.47.6",
     "@types/cors": "^2.8.19",
     "@types/node": "^24.0.15",
+    "@types/supertest": "^6.0.3",
     "oxlint": "^1.6.0",
     "tsup": "^8.5.0",
-    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4"
   }
 }
