--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.6",
+    "@playwright/test": "^1.54.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
