--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,13 @@
         "coverage/**"
       ]
     },
-    "frontend#test:ui": {
+    "test:ui": {
+      "dependsOn": [],
+      "outputs": [
+        "coverage/**"
+      ]
+    },
+     "test:e2e": {
       "dependsOn": [],
       "outputs": [
         "coverage/**"
